--- a/src/components/Navbar/HiddenMenu/HiddenMenu.scss
+++ b/src/components/Navbar/HiddenMenu/HiddenMenu.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 5;
+    z-index: 75;
     width: 100%;
     height: 100%;
     background-color: rgba(61, 22, 89, 0.6);
